--- a/index.html
+++ b/index.html
@@ -18,26 +18,29 @@
     </div>
 
     <div class="result">
-      <p>Paper covers rock. You win!</p>
+      <p>Let's start the game!!</p>
     </div>
 
 
     <div class="choices">
       <div class="choice" id="r">
-        <img src="img/travel_girl.jpg" alt="">
+        <img src="img/rock.png" alt="">
       </div>
       <div class="choice" id="p">
-        <img src="img/trees.jpg" alt="">
+        <img src="img/paper.png" alt="">
       </div>
       <div class="choice" id="s">
-        <img src="img/waterfall.jpg" alt="">
+        <img src="img/scissors.png" alt="">
       </div>
     </div>
 
     <p id="action_message">Make your Move!!</p>
 
-    <script src="app.js">
+    <div class="restart">
+      <button type="button" id="restart_btn">Restart</button>
+    </div>
 
-    </script>
+
+    <script src="app.js"></script>
   </body>
 </html>
